--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "ng-sidebar": "^9.0.0",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.3.3",
     "store": "^2.0.12",
     "tslib": "^1.9.0",
