--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@coreui/coreui": "^2.1.12",
+    "jquery": "^3.4.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "ng-sidebar": "^9.0.0",
     "ng2-search-filter": "^0.5.1",
+    "ngx-toastr": "^9.1.2",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "store": "^2.0.12",
     "tslib": "^1.9.0",
